// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkChip should render correctly 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className={null}
    label="close this is a chip!"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "className" attribute 1`] = `
<div
  className="bpk-chip custom-class"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className={null}
    label="close this is a chip!"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "closeLabel" function attribute 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className={null}
    label="custom close this is a chip!"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "closeLabel" string attribute 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className={null}
    label="close it"
    onClick={[Function]}
  />
</div>
`;
